<resources>
    <string name="app_name">دليل الجاسر العقاري</string>


    <string name="edit_text_hint_title">Title</string>
    <string name="edit_text_hint_owner_tel">هاتف المالك</string>
    <string name="edit_text_hint_logger_tel">هاتف مسجل العقار</string>
    <string name="edit_text_hint_positives">مميزات العقار</string>
    <string name="edit_text_hint_negatives">سلبيات العقار</string>
    <string name="edit_text_hint_date">التاريخ</string>
    <string name="edit_text_hint_area">المساحة</string>


    <string name="edit_text_hint_location">العنوان</string>
    <string name="text_add_image">إضافة صور</string>
    <string name="btn_text_save">حفظ</string>
    <string name="btn_text_update">تعديل</string>

    <string name="note_text_no_estate">لا يوجد عقارات لعرضها!</string>
    <string name="image_content_description">image</string>

    <string name="btn_text_view_on_map">VIEW ON MAP</string>
    <string name="add_place_select_current_location_text">SELECT CURRENT LOCATION</string>
    <string name="edit_text_hint_roomNo">عدد الغرف</string>
    <string name="edit_text_hint_height">الطابق</string>
    <string name="edit_text_hint_directions">الاتجاه</string>
    <string name="edit_text_hint_furniture">الفرش</string>
    <string name="edit_text_hint_situation">حالة المنزل</string>
    <string name="edit_text_hint_legal">الفراغة</string>
    <string name="edit_text_hint_price">السعر</string>
    <string name="edit_text_hint_front_or_back">الواجهة</string>
    <string name="dialog_select_item_title">اختر العنصر</string>
    <string name="btn_text_dialog_ok">أدخل</string>
    <string name="btn_text_dialog_cancel">رجوع</string>
    <string name="dialog_enter_area">أدخل قيمة المساحة</string>
    <string name="dialog_enter_floor_houses_number">أدخل عدد المنازل</string>
    <string name="edit_text_hint_owner">اسم المالك</string>

    <string name="edit_text_hint_logger">مسجل العقار</string>
    <string name="edit_text_hint_priority">الأولوية</string>
    <string name="rb_text_sale">بيع</string>
    <string name="rb_text_rent">آجار</string>
    <string name="rb_text_bet">رهنية</string>
    <string name="rb_text_demand">مطلوب</string>
    <string name="rb_text_offer">معروض</string>
    <string name="edit_text_hint_furniture_situation">حالة الفرش</string>
    <string name="edit_text_hint_owner_standards">معايير المؤجر</string>
    <string name="edit_text_hint_floor_houses_no">عدد المنازل في الطابق الواحد</string>
    <string name="edit_text_hint_rent_duration">مدة الآجار</string>
    <string name="other_dialog_title_name">أدخل الاسم</string>
    <string name="other_dialog_title_standard">أدخل المعيار</string>
    <string name="tv_text_area_unit">متر مربع</string>
    <string name="dialog_enter_price">أدخل السعر</string>
    <string name="edit_text_hint_sale_price_type">البازار</string>
    <string name="edit_text_hint_rent_price_type">نوع الآجار</string>
    <string name="edit_text_hint_bet_price_type">مدة الرهنية</string>
    <string name="other_dialog_title_furniture">أدخل الفرش</string>
    <string name="other_dialog_title_room_no">أدخل عدد الغرف</string>
    <string name="rb_text_history">السجل</string>
    <string name="edit_text_hint_type">النوع</string>
    <string name="rb_text_buy">شراء</string>
    <string name="btn_text_share">مشاركة</string>
    <string name="search_view_hint">اكتب للبحث</string>
    <string name="btn_text_apply">تطبيق</string>


    <array name="roomNo_slider_values">
        <item>2</item>
        <item>3</item>
    </array>

    <array name="area_slider_values">
        <item>100</item>
        <item>200</item>
    </array>

    <array name="height_slider_values">
        <item>2</item>
        <item>3</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cb_text_full_furniture">مفروش</string>
    <string name="cb_text_full_partial_furniture">فرش جزي</string>
    <string name="cb_text_full_no_furniture">غير مفروش</string>
    <string name="cb_text_legal_green_stamp">طابو أخضر</string>
    <string name="cb_text_legal_contact">عقد</string>
    <string name="cb_text_legal_court">حكم محكمة</string>
    <string name="cb_text_priority_important">هام</string>
    <string name="cb_text_priority_urgent">مستعجل</string>
    <string name="edit_text_hint_renter_standards">معايير المستأجر</string>
    <string name="edit_text_hint_demander">اسم صاحب الطلب</string>
    <string name="edit_text_hint_demander_tel">هاتف صاحب الطلب</string>
    <string name="edit_text_hint_height_low">الطابق (الحد الأدنى)</string>
    <string name="edit_text_hint_height_high">الطابق (الحد الأعلى)</string>
    <string name="edit_text_hint_roomNo_high">عدد الغرف (الحد الأعلى)</string>
    <string name="edit_text_hint_roomNo_low">عدد الغرف (الحد الأنى)</string>
    <string name="edit_text_hint_furniture_situation_low">حالة الفرش (الحد الأدنى)</string>
    <string name="edit_text_hint_situation_low">حالة المنزل (الحد الأدنى)</string>
    <string name="edit_text_hint_price_low">السعر (الحد الأعلى)</string>

</resources>