<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="10dp"
    android:layoutDirection="ltr">

    <TextView
        android:id="@+id/tv_area_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_enter_area"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >


    <TextView
        android:id="@+id/tv_dialog_area_value"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="0"
        android:textSize="@dimen/edit_text_text_size"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

        <SeekBar
            android:id="@+id/sb_area_dialog"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:scaleX="-1"
            android:max="100"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tv_area_dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_text_dialog_cancel"
            android:padding="10dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/btn_text_size"
            android:foreground="?attr/selectableItemBackground"
            />
        <TextView
            android:id="@+id/tv_area_dialog_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_text_dialog_ok"
            android:textSize="@dimen/btn_text_size"
            android:padding="10dp"
            android:textColor="@android:color/holo_red_dark"
            android:gravity="center"
            android:foreground="?attr/selectableItemBackground"
            />




    </LinearLayout>




</LinearLayout>