<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="10dp"
    android:layoutDirection="ltr"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_enter_price"
        android:textSize="@dimen/btn_text_size"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"

        >
        <TextView
            android:id="@+id/tv_dialog_price_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:gravity="center"
            android:textSize="@dimen/edit_text_text_size"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <Spinner
            android:id="@+id/sp_unit_price_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layoutDirection="rtl"
            android:layout_marginTop="10dp"

            />
        <Spinner
            android:id="@+id/sp_type_price_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layoutDirection="rtl"
            android:layout_marginTop="10dp"

            />










    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/tv_price_dialog_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_price_plus_24"
            />


    <SeekBar
        android:id="@+id/sb_price_dialog"
        android:layout_width="0dp"
        android:layout_weight="50"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        android:max="199"
        />

        <TextView
            android:id="@+id/tv_price_dialog_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_price_minus_24"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tv_price_dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_text_dialog_cancel"
            android:padding="10dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/btn_text_size"
            android:foreground="?attr/selectableItemBackground"
            />
        <TextView
            android:id="@+id/tv_price_dialog_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_text_dialog_ok"
            android:textSize="@dimen/btn_text_size"
            android:padding="10dp"
            android:textColor="@android:color/holo_red_dark"
            android:gravity="center"
            android:foreground="?attr/selectableItemBackground"
            />




    </LinearLayout>




</LinearLayout>